--- a/Tests/Fixtures/Content.html
+++ b/Tests/Fixtures/Content.html
@@ -1,10 +1,10 @@
 <div class="embed embed-responsive embed-responsive-16by9">
     <iframe src="https://www.youtube-nocookie.com/embed/yiJjpKzCVE4?autohide=1&amp;controls=1&amp;enablejsapi=1&amp;origin=http%3A%2F%2F8-7.typo3.test" allowfullscreen class="embed-responsive-item" title="Grafbonze ist geschrumpft! | Minecraft | Deutsch HD" allow="fullscreen"></iframe>
 </div>
-<div id="c227" class="frame frame-default frame-type-html frame-layout-0 frame-space-before-none frame-space-after-none">
+<div class="frame frame-default frame-type-html frame-layout-0 frame-space-before-none frame-space-after-none">
     <iframe width="560" height="315" src="https://www.youtube.com/watch?v=LMx4SmK4s0U&controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<div id="c228" class="frame frame-default frame-type-html frame-layout-0 frame-space-before-none frame-space-after-none">
+<div class="frame frame-default frame-type-html frame-layout-0 frame-space-before-none frame-space-after-none">
     <iframe width="560" height="315" src="//www.youtube-nocookie.com/embed/9zoHWNR5OcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 <div class="embed embed-responsive embed-responsive-16by9">
@@ -13,11 +13,19 @@
 <div class="embed embed-responsive embed-responsive-16by9">
     <iframe src="https://player.vimeo.com/video/238376269?title=0&amp;byline=0&amp;portrait=0" allowfullscreen="" class="embed-responsive-item" title="TYPO3 - Still Here" allow="fullscreen"></iframe>
 </div>
-<div id="c235" class="frame frame-default frame-type-html frame-layout-0 frame-space-before-none frame-space-after-none">
+<div class="frame frame-default frame-type-html frame-layout-0 frame-space-before-none frame-space-after-none">
     <div style="padding:56.25% 0 0 0;position:relative;">
         <iframe src="https://player.vimeo.com/video/238386951" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen=""></iframe>
     </div>
     <p>
         <a href="//vimeo.com/238386951">Why choose TYPO3</a> from <a href="https://vimeo.com/studioflox">studioflox</a> on <a href="https://vimeo.com">Vimeo</a>.
     </p>
+</div>
+<div class="frame frame-default frame-type-html frame-layout-0 frame-background-none frame-no-backgroundimage frame-space-before-none frame-space-after-none">
+    <div class="frame-container">
+        <div class="frame-inner">
+            <h2>Street View: TYPO3 GmbH, Emanuel-Leutze-Straße 11, 40547 Düsseldorf</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!4v1597052932563!6m8!1m7!1sCAoSLEFGMVFpcE4weGstMVVla3hhM2VuUjhDQ3gxajVtWndPdVVVVk5pWEp6OUE3!2m2!1d51.245131!2d6.7397424!3f209.060709983442!4f-8.63507084546778!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
+    </div>
 </div>
