[FEATURE] Add OpenStreetMap handler

--- a/Tests/Fixtures/Content.html
+++ b/Tests/Fixtures/Content.html
@@ -29,3 +29,11 @@
         </div>
     </div>
 </div>
+<div class="frame frame-default frame-type-html frame-layout-0 frame-background-none frame-no-backgroundimage frame-space-before-none frame-space-after-none">
+    <div class="frame-container">
+        <div class="frame-inner">
+            <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=6.737816333770753%2C51.24353916815029%2C6.741700172424317%2C51.24519640352675&amp;layer=mapnik" style="border: 1px solid black"></iframe>
+            <br /><small><a href="https://www.openstreetmap.org/#map=19/51.24437/6.73976">View Larger Map</a></small>
+        </div>
+    </div>
+</div>
